fix fixed bg not working on ios

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,8 +8,5 @@ body {
 }
 
 body {
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   background-color: #2b1d60;
-  background-image: url("/bg1.jpg");
 }
